--- a/CercareElementiDom/index.html
+++ b/CercareElementiDom/index.html
@@ -16,5 +16,18 @@
       <li id="elemento-2">Elemento 2</li>
       <li id="elemento-3">Elemento 3</li>
     </ul>
+    <script>
+      // Cerca tutti gli elementi con classe "paragrafo"
+      const elementiClasseP = document.querySelectorAll(".paragrafo");
+      console.log("Elementi con classe 'paragrafo':", elementiClasseP);
+
+      // Cerca l'elemento con id "elemento-3"
+      const elementoConId3 = document.getElementById("elemento-3");
+      console.log("Elemento con id 'elemento-3':", elementoConId3);
+
+      // Cerca tutti gli elementi h2 della pagina
+      const h2Element = document.getElementsByTagName("h2");
+      console.log("Tutti gli elementi h2 della pagina:", h2Element);
+    </script>
   </body>
 </html>
